# steplight

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/: ROADMAP.md  VERSIONING.md
sample_traces/: agent_with_tools.json  anthropic_agent.json  expensive_run.json  failing_run.json  simple_qa.json
steplight/: __init__.py
steplight/adapters/: __init__.py  anthropic.py  common.py  generic.py  langchain.py  mcp.py  openai.py
steplight/cli/: __init__.py  config.py  main.py
steplight/core/: __init__.py  analyzer.py  diff.py  models.py  parser.py  stats.py
steplight/export/: __init__.py  html.py
steplight/export/templates/: report.html.jinja
steplight/tui/: __init__.py  app.py  commands.py  detail_panel.py  diagnostics.py  timeline.py
tests/: test_analyzer.py  test_cli.py  test_diff.py  test_export_html.py  test_parser.py  test_tui.py
